--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
-</head>
+  
+   </head>
 <body>
-    
+    <div class="top">
+        <div id="name">Erica Leonard</div>
+    </div>
+
+    <div class="header">
+        <div class="home">Home</div>
+        <div class="about">About</div>
+        <div class="contact">Contact</div>
+        <div class="projects">Projects</div>
+    </div>
+        <h2>Introducing my site</h2>
+        <div class="filling">This is where I show off my completed projects. They might not be the greatest but they are mine. </div>
+    <div class="large">
+        <img src="https://i.picsum.photos/id/122/4147/2756.jpg">
+    </div>
+    <div class="mid">
+        <img src="https://i.picsum.photos/id/101/2621/1747.jpg">
+        <img src="https://i.picsum.photos/id/1018/3914/2935.jpg">
+        <img src="https://i.picsum.photos/id/1050/6000/4000.jpg">
+        <img src="https://i.picsum.photos/id/1072/3872/2592.jpg">
+        <p>Since I do not have any projects to show currently, I decided to pick some pics to display. As I complete projects I will add them. Thank you for your continued support.</p>
+    </div>
+    <div class="footer">
+        <div class="contact-bottom">Contact</div>
+    </div>
+
 </body>
 </html>
