--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
+    
   
    </head>
 <body>
@@ -24,10 +25,10 @@
         <img src="https://i.picsum.photos/id/122/4147/2756.jpg">
     </div>
     <div class="mid">
-        <img src="https://i.picsum.photos/id/101/2621/1747.jpg">
-        <img src="https://i.picsum.photos/id/1018/3914/2935.jpg">
-        <img src="https://i.picsum.photos/id/1050/6000/4000.jpg">
-        <img src="https://i.picsum.photos/id/1072/3872/2592.jpg">
+        <img class="one" src="https://i.picsum.photos/id/101/2621/1747.jpg">
+        <img class="two" src="https://i.picsum.photos/id/1018/3914/2935.jpg">
+        <img class="three" src="https://i.picsum.photos/id/1050/6000/4000.jpg">
+        <img class="four" src="https://i.picsum.photos/id/1072/3872/2592.jpg">
         <p>Since I do not have any projects to show currently, I decided to pick some pics to display. As I complete projects I will add them. Thank you for your continued support.</p>
     </div>
     <div class="footer">
