--- a/index.html
+++ b/index.html
@@ -6,6 +6,55 @@
     <title>Document</title>
 </head>
 <body>
-    
-</body>
+    <header> 
+        <h1>Erica Leonard</h1> 
+        <nav>
+            <a href="#">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>
+        </nav>
+    </header>
+    <section class="container1">
+        <img src="https://picsum.photos/536/354" alt="a random picture to hold place">
+        <div class="toptext">
+            <h2>Erica Leonard</h2>
+            <a href="projects.html">My Projects</a>
+            <p>some words to hold text for now</p>
+        </div>
+    </section>
+        <div class="gallery">
+            <figure>
+                <img src="https://picsum.photos/id/10/367/267" alt="">
+            </figure>
+            <figcaption>holder text</figcaption>
+            <figure>
+                <img src="https://picsum.photos/id/10/367/267" alt="">
+            </figure>
+            <figcaption>holder text</figcaption>
+            <figure>
+                <img src="https://picsum.photos/id/10/367/267" alt="">
+            </figure>
+            <figcaption>holder text</figcaption><figure>
+                <img src="https://picsum.photos/id/10/367/267" alt="">
+            </figure>
+            <figcaption>holder text</figcaption><figure>
+                <img src="https://picsum.photos/id/10/367/267" alt="">
+            </figure>
+            <figcaption>holder text</figcaption><figure>
+                <img src="https://picsum.photos/id/10/367/267" alt="">
+            </figure>
+            <figcaption>holder text</figcaption><figure>
+                <img src="https://picsum.photos/id/10/367/267" alt="">
+            </figure>
+            <figcaption>holder text</figcaption><figure>
+                <img src="https://picsum.photos/id/10/367/267" alt="">
+            </figure>
+            <figcaption>holder text</figcaption>
+        </div>
+        <footer>
+            <h3>Like what you see?</h3>
+            <a href="contact.html">Contact Me</a>
+        </footer>
+    </body>
 </html>
