--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
     <header> 
@@ -19,42 +20,51 @@
         <img src="https://picsum.photos/536/354" alt="a random picture to hold place">
         <div class="toptext">
             <h2>Erica Leonard</h2>
-            <a href="projects.html">My Projects</a>
+            <button id="myprojects"><a href="projects.html">My Projects</a></button>
             <p>some words to hold text for now</p>
         </div>
     </section>
         <div class="gallery">
             <figure>
-                <img src="https://picsum.photos/id/10/367/267" alt="">
-            </figure>
-            <figcaption>holder text</figcaption>
-            <figure>
-                <img src="https://picsum.photos/id/10/367/267" alt="">
-            </figure>
-            <figcaption>holder text</figcaption>
-            <figure>
-                <img src="https://picsum.photos/id/10/367/267" alt="">
-            </figure>
-            <figcaption>holder text</figcaption><figure>
-                <img src="https://picsum.photos/id/10/367/267" alt="">
-            </figure>
-            <figcaption>holder text</figcaption><figure>
-                <img src="https://picsum.photos/id/10/367/267" alt="">
-            </figure>
-            <figcaption>holder text</figcaption><figure>
-                <img src="https://picsum.photos/id/10/367/267" alt="">
-            </figure>
-            <figcaption>holder text</figcaption><figure>
-                <img src="https://picsum.photos/id/10/367/267" alt="">
-            </figure>
-            <figcaption>holder text</figcaption><figure>
-                <img src="https://picsum.photos/id/10/367/267" alt="">
-            </figure>
-            <figcaption>holder text</figcaption>
+                    <img src="https://picsum.photos/200" alt="placeholder pic">
+                    <figcaption>holder text</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://picsum.photos/200" alt="placeholder pic">
+                    <figcaption>holder text</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://picsum.photos/200" alt="placeholder pic">
+                    <figcaption>holder text</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://picsum.photos/200" alt="placeholder pic">
+                    <figcaption>holder text</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://picsum.photos/200" alt="placeholder pic">
+                    <figcaption>holder text</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://picsum.photos/200" alt="placeholder pic">
+                    <figcaption>holder text</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://picsum.photos/200" alt="placeholder pic">
+                    <figcaption>holder text</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://picsum.photos/200" alt="placeholder pic">
+                    <figcaption>holder text</figcaption>
+                </figure>    
+            </div>
+            
         </div>
         <footer>
             <h3>Like what you see?</h3>
-            <a href="contact.html">Contact Me</a>
-        </footer>
+            <button class="contactme"><a href="contact.html">Contact Me</a>
+                
+            </button>
+            </footer>
     </body>
 </html>
